objects/CS_CSI__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EmailTemplate__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSAAffected__c</fullName>
        <label>GSA Affected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggeringEvent__c</fullName>
        <label>Triggering Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CS_CSI Role Template Mapping</label>
</CustomObject>